# DTestFull

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DTest  DTest.c  DTest.cbp  DTest.h  Init_test  Interface.py  Makefile  Pers Hom Results for the Shaft.docx  README.md  RipsComplexes.m  Rips_Complexes.m  TestTemplate.xml  WitnessComplexes_maxmin.m  bunny_test  cmake_install.cmake  inv_vs_occ  inv_vs_sw  inv_vs_sw_shaft  persistence.py  rh_occ_coil  sbl-vorlume-txt__alpha_complex.xml  sbl-vorlume-txt__boundary.vmd  sbl-vorlume-txt__log.txt  sbl-vorlume-txt__surface_volumes.xml  sw_vs_occ  temp_Inv_spheres.txt  temp_SW_spheres.txt  temp_spheres.txt
Examples/: BunnyExample.md
Inventor_support/Inventor_PMC/: Inventor_PMC.sln
Inventor_support/Inventor_PMC/Inventor_PMC/: DisplayCloud.cs  Inventor_PMC.csproj  Program.cs
Inventor_support/Inventor_PMC/Inventor_PMC/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Notes/: DOM (for the current template format).docx  DOM (purely model oriented).docx  DOM example.docx
SolidWorks_Support/: display_points_macro.swp
SolidWorks_Support/ConsoleApplication1/: SW_PMC_Grid.sln
SolidWorks_Support/ConsoleApplication1/ConsoleApplication1/: Console_PMC.cs  SW_PMC_Grid.csproj
SolidWorks_Support/ConsoleApplication1/ConsoleApplication1/Properties/: AssemblyInfo.cs
data/: OCCFile.stp  black arrow.SLDPRT  black arrow.ipt  black_arrow_nose.SLDPRT  black_arrow_nose.STEP  black_arrow_shaft.SLDPRT  black_arrow_shaft.ipt  concave.ply  cube.ply  cube.stp  lockfile.lck  noseblack_arrow_nose2.ipt  prism.stp  sphere.scad  sphere.stp  ~$black arrow.SLDPRT
data/OldVersions/: black arrow.0002.ipt
python_support/: Constants.py  mfs.py  oce.py  pmc.py  py_interface.py  run_pmc.py  temp_spheres.txt  utils.py
src/: DTest.c  DTest.h  PTemplate.c  PTemplate.h
